--- a/package.json
+++ b/package.json
@@ -1,29 +1,24 @@
 {
-  "name": "castoon",
-  "version": "0.1.0",
+  "name": "castoonapp",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "vite --host",
+    "build": "vue-tsc -b && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@ducanh2912/next-pwa": "^10.2.3",
-    "next": "14.0.4",
-    "next-pwa": "^5.6.0",
-    "react": "^18",
-    "react-dom": "^18"
+    "vue": "^3.4.37"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "@vitejs/plugin-vue": "^5.1.2",
+    "@vue/test-utils": "^2.4.6",
+    "jsdom": "^25.0.1",
+    "typescript": "^5.5.3",
+    "vite": "^5.4.1",
+    "vite-plugin-pwa": "^0.20.5",
+    "vitest": "^2.1.1",
+    "vue-tsc": "^2.0.29"
   }
 }
